YTG-#61 [마이페이지][탭별 아이템] 버그 수정
- 내 정보 (이름, 등급 가져오기) 추가
- 레이아웃 수정

--- a/features/mypage/src/main/res/layout/fragment_my_page.xml
+++ b/features/mypage/src/main/res/layout/fragment_my_page.xml
@@ -22,7 +22,8 @@
 
             <include
                 android:id="@+id/layout_my_info"
-                layout="@layout/layout_my_info" />
+                layout="@layout/layout_my_info"
+                bind:user="@{vm.getUser()}"/>
 
             <include
                 android:id="@+id/layout_tab"
