--- a/features/mypage/src/main/res/layout/item_my_humor_card.xml
+++ b/features/mypage/src/main/res/layout/item_my_humor_card.xml
@@ -10,7 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="87dp"
         android:background="@drawable/bg_rounded_button_color_white"
         android:padding="18dp">
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/sdgnm"
+            android:text="@{humorItem.content}"
             android:textColor="@color/colorSemiBlack"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +58,7 @@
             android:id="@+id/txt_heart_count"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:text="12개"
+            android:text="@{@string/count(humorItem.likes)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
@@ -70,6 +71,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
             android:src="@drawable/ic_comment_small"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
             app:layout_constraintStart_toEndOf="@id/txt_heart_count"
@@ -79,7 +81,8 @@
             android:id="@+id/txt_comment_count"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:text="12개"
+            android:layout_marginStart="4dp"
+            android:text="@{@string/count(humorItem.commentCount)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
@@ -90,8 +93,7 @@
             android:id="@+id/txt_humor_create_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="2020.08.15"
+            android:text="@{humorItem.createdDate}"
             android:textColor="@color/colorSemiBlack"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
             app:layout_constraintEnd_toEndOf="parent"
