--- a/features/mypage/src/main/res/layout/layout_my_info.xml
+++ b/features/mypage/src/main/res/layout/layout_my_info.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="user"
+            type="com.az.core.data.auth.SimpleUser" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="3dp"
-            android:text="@string/user_rating"
+            android:text="@{user.rating}"
             android:textColor="@color/colorWhite"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -34,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:text="@string/user_nickname"
+            android:text="@{user.nickname}"
             android:textColor="@color/colorWhite"
             android:textSize="30sp"
             android:textStyle="normal"
