YTG-#61 [마이페이지][탭별 아이템] 내 정보 가져오기 개발

--- a/features/mypage/src/main/res/layout/fragment_my_page.xml
+++ b/features/mypage/src/main/res/layout/fragment_my_page.xml
@@ -23,7 +23,8 @@
             <include
                 android:id="@+id/layout_my_info"
                 layout="@layout/layout_my_info"
-                bind:user="@{vm.getUser()}"/>
+                bind:userNickname="@{vm.user.nickname}"
+                bind:userRating="@{vm.userRating}"/>
 
             <include
                 android:id="@+id/layout_tab"
