YTG-#61 [마이페이지][탭별 아이템] 내가쓴 글, 북마크 아이템 클릭 이벤트 추가

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -72,7 +72,11 @@
             android:id="@+id/action_logout"
             app:destination="@id/loginFragment"
             app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
+
+        <action
+            android:id="@+id/actionMyPageFragmentToDetailsFragment"
+            app:destination="@id/detailsFragment" />
 
     </fragment>
 
