YTG-#61 [마이페이지][로그아웃] 로그아웃 처리 (스택 제거)

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -71,7 +71,7 @@
         <action
             android:id="@+id/action_logout"
             app:destination="@id/loginFragment"
-            app:popUpTo="@id/loginFragment"
+            app:popUpTo="@id/mainFragment"
             app:popUpToInclusive="true" />
 
         <action
