YTG-#42 [회원가입][아이디중복체크] 아이디 중복체크 기능 추가

--- a/features/signup/src/main/res/layout/fragment_signup.xml
+++ b/features/signup/src/main/res/layout/fragment_signup.xml
@@ -26,7 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@drawable/bg_rounded_button_white_border"
+            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:hint="@string/signup_id"
+            android:inputType="text"
+            android:maxLength="10"
             android:paddingStart="26dp"
             android:paddingEnd="100dp"
             android:singleLine="true"
@@ -42,8 +45,10 @@
         <TextView
             android:id="@+id/txt_id_check_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:onClick="@{() -> vm.idExistenceCheck()}"
+            android:paddingHorizontal="24dp"
             android:paddingBottom="1dp"
             android:text="@string/signup_duplicate_check"
             android:textColor="@color/colorWhite"
@@ -71,8 +76,10 @@
             android:layout_height="56dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/bg_rounded_button_white_border"
+            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:hint="@string/signup_password"
             android:inputType="textPassword"
+            android:maxLength="8"
             android:paddingStart="26dp"
             android:paddingEnd="100dp"
             android:singleLine="true"
@@ -91,8 +98,10 @@
             android:layout_height="56dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/bg_rounded_button_white_border"
+            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:hint="@string/signup_password_check"
             android:inputType="textPassword"
+            android:maxLength="8"
             android:paddingStart="26dp"
             android:paddingEnd="100dp"
             android:singleLine="true"
@@ -127,6 +136,8 @@
             android:layout_marginTop="18dp"
             android:background="@drawable/bg_rounded_button_white_border"
             android:hint="@string/signup_nickname"
+            android:inputType="text"
+            android:maxLength="6"
             android:paddingStart="26dp"
             android:paddingEnd="100dp"
             android:singleLine="true"
@@ -157,8 +168,9 @@
         <TextView
             android:id="@+id/txt_nickname_check_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:paddingHorizontal="24dp"
             android:paddingBottom="1dp"
             android:text="@string/signup_duplicate_check"
             android:textColor="@color/colorWhite"
@@ -173,7 +185,7 @@
             android:layout_height="56dp"
             android:layout_marginTop="40dp"
             android:background="@{vm.isSignUpValid ? @drawable/bg_rounded_button_color_purple : @drawable/bg_rounded_button_color_grey}"
-            android:onClick="@{() -> vm.onSignUpButtonClick()}"
+
             android:text="@string/btn_signup"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent" />
