YTG-#61 [마이페이지][코멘트] 코멘트 보이게 처리

--- a/features/mypage/src/main/res/layout/item_my_comment.xml
+++ b/features/mypage/src/main/res/layout/item_my_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,9 +10,8 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="48dp">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            android:text="잼난닼ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ"
+            android:text="@{commentItem.content}"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
             android:id="@+id/txt_comment_create_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2020.08.15"
+            android:text="@{commentItem.createdDate}"
             android:textColor="@color/colorWhite"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
