--- a/features/mypage/src/main/res/layout/item_my_humor_card.xml
+++ b/features/mypage/src/main/res/layout/item_my_humor_card.xml
@@ -19,6 +19,7 @@
         android:layout_height="87dp"
         android:background="@drawable/bg_rounded_button_color_white"
         android:padding="18dp"
+        android:layout_marginBottom="14dp"
         android:onClick="@{() -> listener.onClickHumorItem(humorItem.id)}">>
 
         <androidx.appcompat.widget.AppCompatTextView
