--- a/features/mypage/src/main/res/layout/layout_my_info.xml
+++ b/features/mypage/src/main/res/layout/layout_my_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -21,13 +22,14 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/user_grade_sticker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="23dp"
             android:src="@drawable/ic_newbie_tag"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            bind:gradeForUserSticker="@{userRating}" />
 
         <TextView
             android:id="@+id/txt_my_rating"
