Feature #61/my page (#62)
* YTG-#12 [마이페이지][탭별 아이템] 탭별 아이템 UI 개발

- 작성 글, 북마크 아이템
- 댓글 아이템
- 설정 아이템

# Conflicts:
#	features/mypage/src/main/java/com/az/mypage/adapter/MyPageRecyclerViewAdapter.kt
#	features/mypage/src/main/res/layout/fragment_my_page.xml
#	features/mypage/src/main/res/layout/layout_bottom_sheet.xml

* YTG-#12 [마이페이지][탭별 아이템] 탭별 아이템 UI 개발

- 작성 글, 북마크 아이템
- 댓글 아이템
- 설정 아이템

* YTG-#12 [마이페이지][탭별 아이템] 탭별 아이템 UI 개발

- 작성 글, 북마크 아이템
- 댓글 아이템
- 설정 아이템

# Conflicts:
#	features/mypage/src/main/java/com/az/mypage/adapter/MyPageRecyclerViewAdapter.kt
#	features/mypage/src/main/res/layout/fragment_my_page.xml
#	features/mypage/src/main/res/layout/layout_bottom_sheet.xml

* YTG-#12 [마이페이지][탭별 아이템] 마이페이지 기능 개발

* YTG-#12 [마이페이지][탭] 탭 개발 (스타일 적용 필요)

* YTG-#12 [마이페이지][탭] 탭 구현하다가 롤백 - 아까우니 커밋

* YTG-#12 [마이페이지][탭] 탭 개발 진행 중

* YTG-#61 [마이페이지][탭별 아이템] 버그 수정

- 내 정보 (이름, 등급 가져오기) 추가
- 레이아웃 수정

* YTG-#61 [마이페이지][탭별 아이템] 내 정보 가져오기 개발

* YTG-#61 [마이페이지][탭별 아이템] 내가쓴 글, 북마크 아이템 클릭 이벤트 추가

* YTG-#61 [마이페이지][로그아웃] 로그아웃 처리 (스택 제거)

* YTG-#61 [마이페이지][코멘트] 코멘트 보이게 처리

* YTG-#61 [마이페이지][스티커] 스티커 적용

* YTG-#61 [마이페이지][스티커] 리뷰 반영

- 클립 투 탑 적용

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -68,6 +68,16 @@
         android:label="MyPageFragment"
         app:moduleName="mypage">
 
+        <action
+            android:id="@+id/action_logout"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true" />
+
+        <action
+            android:id="@+id/actionMyPageFragmentToDetailsFragment"
+            app:destination="@id/detailsFragment" />
+
     </fragment>
 
     <fragment
