--- a/features/mypage/src/main/res/layout/item_my_humor_card.xml
+++ b/features/mypage/src/main/res/layout/item_my_humor_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,24 +16,27 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="87dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
         android:background="@drawable/bg_rounded_button_color_white"
         android:onClick="@{() -> listener.onClickHumorItem(humorItem.id)}"
-        android:padding="18dp">>
+        android:padding="18dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_humor_title"
-            android:layout_width="190dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:ellipsize="end"
-            android:fontFamily="@font/sdgnm"
+            android:fontFamily="@font/sdgnh"
             android:lines="1"
             android:text="@{humorItem.content}"
             android:textColor="@color/colorSemiBlack"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/txt_humor_create_date"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="안드로이드의 반댓말은?" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_bookmark"
@@ -67,12 +70,15 @@
             android:id="@+id/txt_heart_count"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:fontFamily="@font/sdgnh"
             android:text="@{@string/count(humorItem.likes)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
             app:layout_constraintStart_toEndOf="@id/img_heart"
-            app:layout_constraintTop_toTopOf="@id/img_heart" />
+            app:layout_constraintTop_toTopOf="@id/img_heart"
+            tools:text="48개" />
 
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -91,22 +97,28 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:fontFamily="@font/sdgnh"
             android:text="@{@string/count(humorItem.commentCount)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
             app:layout_constraintStart_toEndOf="@id/img_comment"
-            app:layout_constraintTop_toTopOf="@id/img_heart" />
+            app:layout_constraintTop_toTopOf="@id/img_heart"
+            tools:text="10개" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_humor_create_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/app_main_font"
             android:text="@{humorItem.createdDate}"
             android:textColor="@color/colorSemiBlack"
+            android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/img_heart"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/img_heart" />
+            app:layout_constraintTop_toTopOf="@id/img_heart"
+            tools:text="2020.02.22" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
