--- a/features/mypage/src/main/res/drawable/image_selector_comment.xml
+++ b/features/mypage/src/main/res/drawable/image_selector_comment.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false"
         android:drawable="@drawable/ic_comment_hover" />
-    <item android:drawable="@drawable/ic_comment" />
+    <item android:drawable="@drawable/ic_comment_default_2" />
 </selector>
