YTG-#74 [알림페이지][패키지구조] 디렉토리구조 수정

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -82,7 +82,7 @@
 
     <fragment
         android:id="@+id/alarmFragment"
-        android:name="com.az.alarm.AlarmFragment"
+        android:name="com.az.alarm.view.AlarmFragment"
         android:label="AlarmFragment"
         app:moduleName="alarm" />
 
